# Sahil-Cen

./: .env.example  .gitignore  CLAUDE.md  COMPLETE_METHODOLOGY.md  IMPLEMENTATION_SUMMARY.md  PHASE2_METHODOLOGY.md  PHASE2_README.md  PROJECT_PROGRESS.md  QUICKSTART_PHASE2.md  README.md  myscript.md  pyproject.toml
configs/: hybrid_bm25_turn_context2_top5.yaml  naive_rag_session_summary_top5.yaml  naive_rag_turn_top10.yaml  naive_rag_turn_top20.yaml  naive_rag_turn_top5.yaml  naive_rag_window3_top10.yaml  naive_rag_window3_top5.yaml  phase2_full.yaml  phase2_no_llm_extraction.yaml  retrieval_only_turn_top5.yaml
scripts/: download_locomo.sh  run_all_baselines.sh  run_baseline.sh  run_phase2.sh
src/locomo_memory/data/: load_locomo.py  schemas.py
src/locomo_memory/evaluation/: evidence_recall.py  qa_metrics.py  report.py
src/locomo_memory/experiments/: run_rag_qa.py
src/locomo_memory/generation/: llm_client.py  prompts.py
src/locomo_memory/indexing/: chunkers.py  embeddings.py  vector_index.py
src/locomo_memory/phase2/: __init__.py  pipeline.py  schemas.py
src/locomo_memory/phase2/experiments/: __init__.py  run_phase2_qa.py
src/locomo_memory/phase2/ingestion/: __init__.py  agentic_chunker.py  candidate_detector.py  contradiction_resolver.py  salience_scorer.py  semantic_chunker.py
src/locomo_memory/retrieval/: bm25_retriever.py  dense_retriever.py  hybrid_retriever.py
tests/: test_chunker.py  test_evidence_recall.py  test_loader.py  test_metrics.py  test_retriever.py
tests/phase2/: test_graph_index.py  test_schemas.py  test_store.py
(+8 files in other folders)
