[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "locomo-memory"
version = "0.1.0"
description = "Naive LoCoMo vector-RAG benchmark baseline for long-horizon conversational memory"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.0",
    "PyYAML>=6.0",
    "sentence-transformers>=2.7",
    "faiss-cpu>=1.8",
    "numpy>=1.26",
    "pandas>=2.1",
    "tqdm>=4.66",
    "python-dotenv>=1.0",
    "tiktoken>=0.6",
    "rich>=13.0",
    "tenacity>=8.2",
    "anthropic>=0.25",
    "openai>=1.20",
    "typer>=0.12",
    "httpx>=0.27",
    "rank-bm25>=0.2",
    "loguru>=0.7",
    "networkx>=3.2",
    "diskcache>=5.6",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-cov>=5.0"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
